[package]
name = "zerotier-crypto-glue"
authors = ["ZeroTier, Inc. <contact@zerotier.com>"]
license = "MPL-2.0"
description = "ZeroTier common security functions and glue code to wrap cryptography APIs."
readme = "README.md"
categories = ["cryptography", "api-bindings"]
edition = "2021"
version = "0.2.0"
build = "build.rs"

[features]

[dependencies]
openssl-sys = "0.9.91"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"], default-features = false }
ed25519-dalek = { version = "2.0.0", features = ["digest", "rand_core"], default-features = false }
poly1305 = { version = "0.8.0", features = [], default-features = false }
cfg-if = "1.0"
libc = "0.2"
once_cell = "1.18.0"
ctor = "^0"
zssp = { git = "https://github.com/zerotier/zssp", features = ["openssl-sys", "pqc_kyber"], default-features = false }
rand_xoshiro = { version = "0.6.0"}

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
