[package]
name = "zerotier-crypto-glue"
authors = ["ZeroTier, Inc. <contact@zerotier.com>"]
license = "MPL-2.0"
description = "ZeroTier common security functions and glue code to wrap cryptography APIs."
readme = "README.md"
categories = ["cryptography", "api-bindings"]
edition = "2021"
version = "0.1.0"

[features]

[dependencies]
ed25519-dalek = { version = "1.0.1", features = ["std", "u64_backend"], default-features = false }
poly1305 = { version = "0.8.0", features = [], default-features = false }
x25519-dalek = { version = "1.2.0", features = ["std", "u64_backend"], default-features = false }
cfg-if = "1.0"
foreign-types = "0.5.0"
libc = "0.2"
once_cell = "1.18.0"
ctor = "^0"
#ed25519-dalek still uses rand_core 0.5.1, and that version is incompatible with 0.6.4, so we need to implement both.
rand_core_051 = { package = "rand_core", version = "0.5.1" }
ffi = { package = "openssl-sys", version = "0.9.80", path = "../openssl-sys" }
zssp = { git = "ssh://git@github.com/zerotier/zssp.git", branch = "dev" }
rand_xoshiro = { version = "0.6.0"}

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.3.4"
